fixed fade of image and btns, fixed alignment in search section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,6 @@
 	#board {
 		left: 10%;
 		right: 0;
-		top: 24%;
 		margin: auto;
 		margin-bottom: 50px;
 	}
@@ -113,22 +112,13 @@
 
 	.gifPlayOption {
 		position: absolute !important;
-		width: 100%;
-		height: auto;
-		margin: auto !important;
-		top: 0;
-		opacity: 0;
-		float: left;
 	}
 
 	.gifBtn {
 		position: relative;
-		top: -90px;
-		left: 25%;
-	}
-
-	.gifPlayOption:hover {
-		opacity: 1;
+		/*top: -125px;*/
+		margin-top: -250%;
+		left: 75%;
 	}
 
 /*save bar style*/
@@ -144,4 +134,9 @@
 
 	#nav-suggestion{
 		text-align: center;
+	}
+
+/*media Query*/
+	@media and screen(max-width: 980px){
+
 	}
